tests/static/pass/inline/3-b.c
extern inline int f(void) { return 0; }
