tests/static/fail/ext-uses/2.0.c
extern int link_error(void);

int main(void) {
      while (0) link_error();
      return 0;
}
